--- a/src/styles.css
+++ b/src/styles.css
@@ -11,8 +11,18 @@
 
 nav{
     display: flex; 
-    justify-content: space-around; 
+    justify-content: center; 
     border: 1px solid blue;
+}
+nav > ul{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    list-style-type: none;
+}
+
+nav >ul>li{
+    justify-self: space-around;
 }
 
 aside{
@@ -27,6 +37,7 @@ aside>ul{
     display: flex;
     justify-items: center;
     border-radius: 20%;;
+    list-style-type: none;
 
 }
 
@@ -38,4 +49,57 @@ aside>ul:hover{
     width: 80vw;
     height: 100vw;
     border: 1px solid salmon;
+}
+
+#modal-task{
+    border:none;
+    border-radius: 8px;
+    padding: 1.5rem;
+    width: 400px;
+    max-width: 90%;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#modal-task div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+#modal-task::backdrop{
+    background: rgba(75, 233, 115, 0.3);
+}
+
+#cards-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 80vh;
+    margin-top: 10px;
+    gap: 15px;
+
+}
+
+.cards-div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    width: 250px;
+    height: 150px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 5px;
+    margin-left: 5px;
+    gap: 8px;
+
+
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+    transition: box-shadow 0.2s ease;
 }
